# hobs_nico_charity

./: Charity.ipynb  README.md
deploy/: Makefile  application.py  pyproject.toml  wsgi.py  zappa_settings.json
deploy/data/: edu.json  nat.json  sgd_class_.pkl  test.json
deploy/hobs_nico_charity/: load.py
